spacing issues

--- a/public/stylesheets/movie.css
+++ b/public/stylesheets/movie.css
@@ -64,7 +64,7 @@ input[type="submit"] {
 }
 
 .similar{
-  margin-top: 200px;
+  margin-top: 10px;
   background-color: #363940;
   margin-left: 10px;
   margin-right:10px;
